Sports Brawl - UC 376 - Rename Folder (#5005)
* Rename this Sports Brawl

* Add official designator

* uc-376 update Sports Brawl on Yaml

--- a/approved.yaml
+++ b/approved.yaml
@@ -61,6 +61,10 @@ thestrange:
 - "The Strange by Roll20"
 - "hidden"
 
+sportsbrawlofficial:
+- "Sports Brawl by Lost West Media"
+- Sports Brawl
+
 #Publisher Sheets
 #When adding an official sheet include 'official' in the short name for the select menu
 earthdawnofficial:
@@ -2224,10 +2228,6 @@ aventures:
 - Aventures
 - Aventures
 
-sportsbrawl:
-- Lost West Media
-- Sports Brawl
-
 mspace:
 - M-Space
 - M-Space
@@ -2859,4 +2859,3 @@ gaslands:
 scup:
   - "SCUP"
   - "The Sword, The Crown, and The Unspeakable Power"
-
