Fix Sports Brawl display name

--- a/approved.yaml
+++ b/approved.yaml
@@ -63,7 +63,7 @@ thestrange:
 
 sportsbrawlofficial:
 - "Sports Brawl by Lost West Media"
-- Sports Brawl
+- "Sports Brawl by Lost West Media"
 
 #Publisher Sheets
 #When adding an official sheet include 'official' in the short name for the select menu
