--- a/approved.yaml
+++ b/approved.yaml
@@ -174,8 +174,8 @@ theonering:
 - "The One Ring"
 
 pathfinderneceros:
-- "Pathfinder-Neceros"
-- "Pathfinder (Community)"
+- "Pathfinder Community"
+- "Pathfinder Community"
 - "Pathfinder"
 
 werewolf2e:
@@ -2859,3 +2859,11 @@ gaslands:
 scup:
   - "SCUP"
   - "The Sword, The Crown, and The Unspeakable Power"
+
+thefantasytrip:
+  - "The Fantasy Trip"
+  - "The Fantasy Trip"
+
+
+
+
