Ars Magica - Fixing formulas
Dice formula brackets were out of order.

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@ Call_of_Cthulhu_Spanish/Delta Green Variant
 /base.css
 /app.css
 /.vs/config/applicationhost.config
+WFRP4CharSheet/WFRP4Charsheet_beforebutcher.html
