--- a/approved.yaml
+++ b/approved.yaml
@@ -2864,6 +2864,12 @@ thefantasytrip:
   - "The Fantasy Trip"
   - "The Fantasy Trip"
 
+songoficeandfire:
+  - "A Song of Ice and Fire"
+  - "Song of Ice and Fire Roleplaying"
 
+ratsinthewalls2:
+  - "RatasEnLasParedes"
+  - "Ratas En Las Paredes"
 
 
