uc-531 add 2 sheets

--- a/approved.yaml
+++ b/approved.yaml
@@ -2816,6 +2816,11 @@ nightwitches:
 carbon2185:
   - "carbon-2185-quickstart"
   - "Carbon 2185 (quick start)"
+  - "hidden"
+
+carbon2185release:
+  - "Carbon-2185"
+  - "Carbon 2185"
   - "Dungeons & Dragons"
 
 cwodexalted:
@@ -2871,5 +2876,9 @@ songoficeandfire:
 ratsinthewalls2:
   - "RatasEnLasParedes"
   - "Ratas En Las Paredes"
+
+throughthebreach:
+  - "Through The Breach"
+  - "Through The Breach"
 
 
