uc-555 new sheets

--- a/approved.yaml
+++ b/approved.yaml
@@ -1001,7 +1001,7 @@ shadowssol:
 shadowrungerman:
 - "Shadowrun5D-german"
 - "Shadowrun: 5th Edition (German)"
-- "Shadowrun"
+- "hidden"
 
 lotfp:
 - "Lotfp"
@@ -2061,6 +2061,7 @@ blackcompany:
 mythras:
 - "Mythras"
 - "Mythras"
+- "Mythras System"
 
 cronicasrpg:
 - "Cronicas-RPG"
@@ -2231,6 +2232,7 @@ aventures:
 mspace:
 - M-Space
 - M-Space
+- "Mythras System"
 
 tagmar:
 - Tagmar
@@ -2393,7 +2395,7 @@ demongate:
 l5radvanced:
 - L5R Advanced
 - Legend of the Five Rings (Advanced)
-- Legend of the Five Rings
+- hidden
 
 spire:
 - Spire
@@ -2703,7 +2705,7 @@ villiansandvigilantes:
 
 shadowrun5thedition:
 - "Shadowrun5thEdition"
-- "Shadowrun 5th Edition"
+- "Shadowrun: 5th Edition"
 - "Shadowrun"
 
 dutyandhonor:
@@ -2880,5 +2882,14 @@ ratsinthewalls2:
 throughthebreach:
   - "Through The Breach"
   - "Through The Breach"
+
+L5R5thedition:
+  - "L5R 5th Edition Unofficial"
+  - "Legend of the Five Rings: 5th Edition"
+  - "Legend of the Five Rings"
+
+storiesuntold:
+  - "Stories Untold"
+  - "Stories Untold"
 
 
