cleaning up approved list

--- a/approved.yaml
+++ b/approved.yaml
@@ -249,16 +249,6 @@
   #=== end GURPS ===
 
 #=== D&D ===
-  adventurepack:
-    - "Adventure Pack"
-    - "D&D 3.5E Adventure Pack"
-    - "Dungeons and Dragons"
-
-  dnd35e:
-    - "D&D_3-5"
-    - "D&D 3.5E"
-    - "Dungeons and Dragons"
-
   adnd1e:
     - "AD&D_1E"
     - "Advanced 1st Edition"
@@ -269,9 +259,64 @@
     - "Advanced 2nd Edition (Simple Sheet)"
     - "Dungeons and Dragons"
 
+  adnd2erevised:
+    - "AD&D 2E Revised"
+    - "Advanced 2nd Edition"
+    - "Dungeons and Dragons"
+
+  adventurepack:
+    - "Adventure Pack"
+    - "D&D 3.5E Adventure Pack"
+    - "Dungeons and Dragons"
+
+  dnd35e:
+    - "D&D_3-5"
+    - "D&D 3.5E"
+    - "Dungeons and Dragons"
+
+  dnd35ecn:
+    - "D&D_3-5-CN"
+    - "D&D 3.5E (Chinese)"
+    - "Dungeons and Dragons"
+
+  dnd35efrench:
+    - "D&D_3-5-fr"
+    - "D&D 3.5E (French)"
+    - "Dungeons and Dragons"
+
+  dnd35espanish:
+    - "D&D_3-5 SPANISH"
+    - "D&D 3.5E (Spanish)"
+    - "Dungeons and Dragons"
+
+  dnd35eportuguese:
+    - "D&D_3-5-pt-br"
+    - "D&D 3.5E (Portuguese)"
+    - "Dungeons and Dragons"
+
+  blackcompany:
+    - "The Black Company"
+    - "D&D 3.5E The Black Company"
+    - "Dungeons and Dragons"
+
   dnd4e:
     - "D&D_4E"
     - "D&D 4E"
+    - "Dungeons and Dragons"
+
+  dnd5e:
+    - "DnD_5e"
+    - "D&D 5E (Community Contributed)"
+    - "Dungeons and Dragons"
+
+  dnd5eshaped2:
+    - "5eShaped"
+    - "D&D 5E (Shaped)"
+    - "Dungeons and Dragons"
+
+  dnd5ecommunitycn:
+    - "DnD_5e_Chinese_Traditional"
+    - "D&D 5E (Community, Chinese)"
     - "Dungeons and Dragons"
 
   dndnextactoba:
@@ -279,9 +324,44 @@
     - "D&D Next *PLAYTEST RULES*"
     - "hidden"
 
-  dnd5e:
-    - "DnD_5e"
-    - "D&D 5E (Community Contributed)"
+  becmidnd:
+    - "D&D_BECM"
+    - "BECMI"
+    - "Dungeons and Dragons"
+
+  theblackhack:
+    - "Black Hack"
+    - "The Black Hack"
+    - "Dungeons and Dragons"
+
+  darkerdungeon:
+    - "5e Darker Dungeons"
+    - "D&D 5E (Darker Dungeons)"
+    - "Dungeons and Dragons"
+
+  masseffect5e:
+    - "MassEffect_5e"
+    - "Mass Effect"
+    - "Dungeons and Dragons"
+
+  adventuresinmiddleearth:
+    - "Adventures in Middle Earth"
+    - "D&D 5E Adventures in Middle Earth"
+    - "Dungeons and Dragons"
+
+  eirendor:
+    - "Eirendor"
+    - "Eirendor"
+    - "Dungeons and Dragons"
+
+  DnD_Moldvay:
+    - "DnD_Moldvay_AmandatheAmazon"
+    - "Moldvay"
+    - "Dungeons and Dragons"
+
+  dnd5escrolls:
+    - "DnD5E Character Scrolls"
+    - "D&D 5E (Scrolls)"
     - "Dungeons and Dragons"
 
   #=== end D&D ===
@@ -624,9 +704,60 @@
 
 #=== Warhammer ===
   # Warhammer 40k
+  
+  blackcrusade:
+    - "Black_Crusade"
+    - "Black Crusade"
+    - "Warhammer"
+
+  warhammerblackcrusadeadv:
+    - "Black Crusade Advanced API"
+    - "Warhammer 40k: Black Crusade Advanced"
+    - "Warhammer"
+
   darkheresy:
     - "Dark_Heresy"
     - "Dark Heresy: 1st Edition"
+    - "Warhammer"
+
+  darkheresy2e:
+    - "Dark_Heresy_2ed"
+    - "Dark Heresy: 2nd Edition"
+    - "Warhammer"
+
+  darkheresy2eadvanced:
+    - "Dark Heresy Advanced 2nd Edition"
+    - "Dark Heresy: 2nd Edition (Advanced API)"
+    - "Warhammer"
+
+  deathwatch:
+    - "Deathwatch"
+    - "Deathwatch"
+    - "Warhammer"
+
+  onlywar:
+    - "Only War"
+    - "Only War"
+    - "Warhammer"
+
+  roguetrader:
+    - "Rogue_Trader"
+    - "Rogue Trader"
+    - "Warhammer"
+
+  roguetraderfr:
+    - "Rogue_Trader_fr"
+    - "Rogue Trader (French)"
+    - "Warhammer"
+
+  wrathandglory:
+    - "Wrath and Glory API"
+    - "Wrath and Glory (API)"
+    - "Warhammer"
+
+  40kwrathandglory:
+    - "Warhammer40k-WrathandGlory"
+    - "Wrath and Glory"
     - "Warhammer"
 
   # Warhammer Fantasy
@@ -638,6 +769,11 @@
   warhammerfantasy2e:
     - "Warhammer-Fantasy-Roleplay-2nd-Edition"
     - "Warhammer Fantasy: 2nd Edition"
+    - "Warhammer"
+
+  warhammerfantasy2e_havoc:
+    - "WFRP2E-Havoc"
+    - "Warhammer Fantasy: 2nd Edition (Havoc)"
     - "Warhammer"
 
   warhammerfantasyv2fr:
@@ -653,6 +789,11 @@
   wfrp3eFR:
     - "wfrp3e-French"
     - "Warhammer Fantasy: 3rd Edition (French)"
+    - "Warhammer"
+
+    wfrp4:
+    - "WFRP4CharSheet"
+    - "Warhammer Fantasy: 4th Edition"
     - "Warhammer"
 
   #=== end Warhammer ===
@@ -1041,11 +1182,6 @@ lordsofgossamerandshadow:
 - "Lords-Of-Gossamer-And-Shadow"
 - "Lords of Gossamer and Shadow"
 
-dnd35eportuguese:
-- "D&D_3-5-pt-br"
-- "D&D 3.5E (Portuguese)"
-- "Dungeons and Dragons"
-
 dasschwarzeauge:
 - "Das_Schwarze_Auge_4-1"
 - "Das Schwarze Auge 4 (German)"
@@ -1122,11 +1258,6 @@ mektonzeta:
 naheulbeuk:
 - "Naheulbeuk"
 - "Le Donjon de Naheulbeuk (French)"
-
-becmidnd:
-- "D&D_BECM"
-- "BECMI"
-- "Dungeons and Dragons"
 
 cwrenaissance:
 - "CakebreadWaltonRenaissance"
@@ -1212,11 +1343,6 @@ dragonageBR:
 - "Dragon-Age-RPG-PT-BR"
 - "Dragon Age RPG (Portuguese)"
 - "AGE System"
-
-DnD_Moldvay:
-- "DnD_Moldvay_AmandatheAmazon"
-- "Moldvay"
-- "Dungeons and Dragons"
 
 conan2e:
 - "Conan-2nd-Ed"
@@ -1309,11 +1435,6 @@ lotfp:
 - "Lotfp"
 - "Lamentations of the Flame Princess"
 
-dnd35efrench:
-- "D&D_3-5-fr"
-- "D&D 3.5E (French)"
-- "Dungeons and Dragons"
-
 tormentarpg:
 - "TormentaRPG"
 - "Tormenta (Portuguese)"
@@ -1323,11 +1444,6 @@ callofcthuluspanish:
 - "Call_of_Cthulhu_Spanish"
 - "Call of Cthulhu: 5th Edition"
 - "Basic Roleplaying System"
-
-dnd35espanish:
-- "D&D_3-5 SPANISH"
-- "D&D 3.5E (Spanish)"
-- "Dungeons and Dragons"
 
 cthulhutech:
 - "CthulhuTech_1ed"
@@ -1433,11 +1549,6 @@ supersix:
 - "Supersix"
 - "Supersix (French)"
 
-dnd35ecn:
-- "D&D_3-5-CN"
-- "D&D 3.5E (Chinese)"
-- "Dungeons and Dragons"
-
 insmv5efr:
 - "INS-MV_5E"
 - "In Nomine Satanis / Magna Veritas 5th Edition (French)"
@@ -1513,11 +1624,6 @@ thesprawl:
 - "The Sprawl"
 - "hidden"
 
-dnd5eshaped2:
-- "5eShaped"
-- "D&D 5E (Shaped)"
-- "Dungeons and Dragons"
-
 nothankyouevil:
 - "No Thank You Evil"
 - "No Thank You, Evil"
@@ -1575,11 +1681,6 @@ gammaworld7e:
 qinwarringstates:
 - "Qin Warring States"
 - "Qin: Warring States"
-
-dnd5ecommunitycn:
-- "DnD_5e_Chinese_Traditional"
-- "D&D 5E (Community, Chinese)"
-- "Dungeons and Dragons"
 
 stormbringer:
 - "Stormbringer"
@@ -1729,11 +1830,6 @@ neonsolitude:
 - "NeonSolitude"
 - "Neon Solitude"
 
-adnd2erevised:
-- "AD&D 2E Revised"
-- "Advanced 2nd Edition"
-- "Dungeons and Dragons"
-
 leagueofadventuresfr:
 - "LeaguesOfAdventures-fr"
 - "Leagues of Adventure (French)"
@@ -1756,11 +1852,6 @@ fasatrek:
 - "7th Sea 2e"
 - "7th Sea: 2nd Edition"
 - "Seventh Sea"
-
-warhammerfantasy2e_havoc:
-- "WFRP2E-Havoc"
-- "Warhammer Fantasy: 2nd Edition (Havoc)"
-- "Warhammer"
 
 classictraveller:
 - "Classic_Traveller"
@@ -1891,11 +1982,6 @@ microluxe20:
 - "Microluxe20"
 - "Microlite20"
 
-dnd5escrolls:
-- "DnD5E Character Scrolls"
-- "D&D 5E (Scrolls)"
-- "Dungeons and Dragons"
-
 herokids:
 - "Hero Kids"
 - "Hero Kids"
@@ -1937,11 +2023,6 @@ kult3e:
 hellywood:
 - "Hellywood"
 - "Hellywood"
-
-darkheresy2eadvanced:
-- "Dark Heresy Advanced 2nd Edition"
-- "Dark Heresy: 2nd Edition (Advanced API)"
-- "Warhammer"
 
 mordiou:
 - "Mordiou"
@@ -2037,11 +2118,6 @@ metamorphosisalphae1:
 - "MetamorphosisAlpha_1e"
 - "Metamorphosis Alpha: 1st Edition"
 
-theblackhack:
-- "Black Hack"
-- "The Black Hack"
-- "Dungeons and Dragons"
-
 tailsofequestria:
 - "TailsOfEquestria"
 - "Tails of Equestria"
@@ -2085,11 +2161,6 @@ acks:
 - "ACKS"
 - "Adventure Conqueror King"
 
-adventuresinmiddleearth:
-- "Adventures in Middle Earth"
-- "D&D 5E Adventures in Middle Earth"
-- "Dungeons and Dragons"
-
 icrpgwarpshell:
 - "ICRPG (Warp Shell)"
 - "Index Card RPG (Warp Shell)"
@@ -2127,16 +2198,6 @@ openlegendmin:
 - "OpenLegend_Minimalist"
 - "Open Legend (Minimalist)"
 - "Open Legend"
-
-eirendor:
-- "Eirendor"
-- "Eirendor"
-- "Dungeons and Dragons"
-
-blackcompany:
-- "The Black Company"
-- "D&D 3.5E The Black Company"
-- "Dungeons and Dragons"
 
 mythras:
 - "Mythras"
@@ -2566,11 +2627,6 @@ bandofblades:
 - "Band of Blades"
 - "Blades in the Dark"
 
-warhammerblackcrusadeadv:
-- "Black Crusade Advanced API"
-- "Warhammer 40k: Black Crusade Advanced"
-- "Warhammer"
-
 leschantsdeloss:
 - "Les Chants de Loss"
 - "Les Chants de Loss"
@@ -2623,16 +2679,6 @@ ellipses:
 - "Ellipses"
 - "Ellipses"
 
-wrathandglory:
-- "Wrath and Glory API"
-- "Wrath and Glory (API)"
-- "Warhammer"
-
-40kwrathandglory:
-- "Warhammer40k-WrathandGlory"
-- "Wrath and Glory"
-- "Warhammer"
-
 karyudensetsu:
 - "Karyu Densetsu"
 - "Karyu Densetsu"
@@ -2657,11 +2703,6 @@ advancedpandemonium:
 - "The ADVANCED Pandemonium"
 - "The ADVANCED: Pandemonium"
 
-darkerdungeon:
-- "5e Darker Dungeons"
-- "D&D 5E (Darker Dungeons)"
-- "Dungeons and Dragons"
-
 mortallybankrupt:
 - "Mortally Bankrupt"
 - "Mortally Bankrupt"
@@ -2684,11 +2725,6 @@ witcher:
 - "TheWitcher"
 - "The Witcher"
 
-wfrp4:
-- "WFRP4CharSheet"
-- "Warhammer Fantasy: 4th Edition"
-- "Warhammer"
-
 thefade2:
   - "The Fade Tabletop 2e Sheet"
   - "The Fade 2e"
@@ -2707,11 +2743,6 @@ stargatesg1:
   - "StargateSG-1"
   - "Stargate SG 1"
   - "Stargate"
-
-masseffect5e:
-  - "MassEffect_5e"
-  - "Mass Effect"
-  - "Dungeons and Dragons"
 
 marvelsaga:
   - "Marvel_Saga"
