uc-566 fixed name

--- a/approved.yaml
+++ b/approved.yaml
@@ -71,7 +71,7 @@ earthdawnofficial:
 
 hcsvntdracones:
   - "Hc Svnt Dracones Second Edition"
-  - "Hc Svnt Dracones 2E by From Weapons Grade Funk"
+  - "Hc Svnt Dracones 2E by Weapons Grade Funk"
   - "Hc Svnt Dracones"
 
 reachoftitanofficial:
