uc-566 update hc name

--- a/approved.yaml
+++ b/approved.yaml
@@ -69,7 +69,7 @@ earthdawnofficial:
   - "Earthdawn by FASA"
   - "Earthdawn"
 
-hcsvntdracones:
+hcsvntdraconesofficial:
   - "Hc Svnt Dracones Second Edition"
   - "Hc Svnt Dracones 2E by Weapons Grade Funk"
   - "Hc Svnt Dracones"
