fixed approved and line endings

--- a/approved.yaml
+++ b/approved.yaml
@@ -671,6 +671,11 @@
   fatecore:
     - "Fate_Core"
     - "Fate: Core Edition"
+    - "hidden"
+
+  fatecorev2:
+    - "Fate Core v2"
+    - "Fate: Core Edition"
     - "Fate"
 
   fatecorewithrolls:
@@ -1154,6 +1159,11 @@
   nwoddemon:
     - "NWOD-Demon"
     - "Demon: The Descent (nWoD)"
+    - "hidden"
+
+  demondescent:
+    - "DemonTheDescent"
+    - "Demon: The Descent"
     - "Storytelling System"
 
   cwoddemonthefallen:
