uc-575 fixed approved

--- a/approved.yaml
+++ b/approved.yaml
@@ -95,7 +95,6 @@
     - "Yatzoid by Mats Svendsen"
 
 #===== Community Sheets ======
-
 #=== 2d20 ===
   conan2d20:
     - "conan-2d20"
@@ -467,7 +466,6 @@
   #=== end Cypher System ===
 
 #=== D6 ===
-
   d6fantasy:
     - "D6_Fantasy"
     - "D6 Fantasy"
@@ -779,7 +777,6 @@
   #=== end Gamma World ===
 
 #=== GUMSHOE ===
-
   nightblackagents:
     - "Night Black Agents gumshoe"
     - "Night Black Agents"
@@ -827,7 +824,6 @@
   #=== end GURPS ===
 
 #=== Legend of the Five Rings ===
-
   l5rfantasyflight:
       - L5R Fantasy Flight Games
       - Legend of the Five Rings (Fantasy Flight Games)
@@ -874,7 +870,6 @@
   #=== end Microlite20 ===
 
 #=== Mutants and Masterminds ===
-
   mamm2e:
   - "mutants-and-masterminds-2e-master"
   - "Mutants and Masterminds: 2nd Edition"
@@ -1004,7 +999,6 @@
   #=== end RWBY Tabletop System ===
 
 #=== Savage Worlds ===
-
   savageworlds:
     - "SavageWorlds"
     - "Savage Worlds"
@@ -1102,7 +1096,6 @@
   #=== end Starfinder ===
 
 #=== Stars Without Number ===
-
   otherdust:
     - "Other_Dust"
     - "Other Dust"
@@ -1159,12 +1152,12 @@
   nwoddemon:
     - "NWOD-Demon"
     - "Demon: The Descent (nWoD)"
-    - "hidden"
-
-  demondescent:
-    - "DemonTheDescent"
-    - "Demon: The Descent"
     - "Storytelling System"
+
+ # demondescent:
+   # - "DemonTheDescent"
+  #  - "Demon: The Descent"
+  #  - "Storytelling System"
 
   cwoddemonthefallen:
     - "CWOD-Demon"
@@ -1312,7 +1305,6 @@
   #=== end Swords & Wizardry ===
 
 #=== The One Ring ===
-
   theonering:
     - "The One Ring"
     - "The One Ring"
@@ -1326,7 +1318,7 @@
   theoneringde:
     - "Der Eine Ring"
     - "Der Eine Ring (German)"
-  - "hidden"
+    - "hidden"
 
   #=== end The One Ring ===
 
@@ -1349,7 +1341,6 @@
   #=== end Tormenta ===
 
 #=== Traveller ===
-
   classictraveller:
     - "Classic_Traveller"
     - "Classic Traveller"
@@ -1365,10 +1356,7 @@
     - "Mongoose Traveller: 2nd Edition"
     - "Traveller"
 
-  #=== end Traveller ===
-
 #=== Unknown Armies ===
-
   unknownarmies:
     - "UnknownArmies"
     - "Unknown Armies: 2nd Edition"
@@ -1388,7 +1376,6 @@
 
 #=== Warhammer ===
   # Warhammer 40k
-  
   blackcrusade:
     - "Black_Crusade"
     - "Black Crusade"
@@ -1444,12 +1431,7 @@
     - "Wrath and Glory"
     - "Warhammer"
 
-  # Warhammer Fantasy
-  warhammerfantasy:
-    - "WFRP-2nd-Ed"
-    - "Warhammer Fantasy: 2nd Edition (Simple)"
-    - "Warhammer"
-    
+  # Warhammer Fantasy    
   warhammerfantasy2e:
     - "Warhammer-Fantasy-Roleplay-2nd-Edition"
     - "Warhammer Fantasy: 2nd Edition"
@@ -1465,6 +1447,11 @@
     - "Warhammer Fantasy: 2nd Edition (French)"
     - "Warhammer"
 
+  warhammerfantasy:
+    - "WFRP-2nd-Ed"
+    - "Warhammer Fantasy: 2nd Edition (Simple)"
+    - "Warhammer"
+
   wfrp3e:
     - "wfrp3e"
     - "Warhammer Fantasy: 3rd Edition"
@@ -1475,7 +1462,7 @@
     - "Warhammer Fantasy: 3rd Edition (French)"
     - "Warhammer"
 
-    wfrp4:
+  wfrp4:
     - "WFRP4CharSheet"
     - "Warhammer Fantasy: 4th Edition"
     - "Warhammer"
