uc-575 add magica

--- a/approved.yaml
+++ b/approved.yaml
@@ -3053,5 +3053,9 @@ bluebeardbride:
   - "Bluebeard's Bride"
   - "Bluebeard's Bride"
 
+magicalogica:
+  - "Magica_Logia"
+  - "Magica Logia"
+  
 
 
