--- a/approved.yaml
+++ b/approved.yaml
@@ -2908,7 +2908,7 @@ bluebeardbride:
   - "Bluebeard's Bride"
   - "Bluebeard's Bride"
 
-magicalogica:
-  - "Magica_Logia"
-  - "Magica Logia"
+##magicalogica:
+##  - "Magica_Logia"
+##  - "Magica Logia"
   
