add two sheets, fix line endings W&G

--- a/approved.yaml
+++ b/approved.yaml
@@ -2911,4 +2911,21 @@ bluebeardbride:
 ##magicalogica:
 ##  - "Magica_Logia"
 ##  - "Magica Logia"
+
+palladiumfantasy:
+  - "Palladium Fantasy"
+  - "Palladium Fantasy"
+
+songsofthedusk:
+  - "Songs for the Dusk"
+  - "Songs for the Dusk"
+  - "Blades in the Dark"
+
+
+
+
+
+
+
+
   
