fix spelling error in approve

--- a/approved.yaml
+++ b/approved.yaml
@@ -2913,8 +2913,8 @@ bluebeardbride:
 ##  - "Magica Logia"
 
 palladiumfantasy:
-  - "Palladium Fantasy"
-  - "Palladium Fantasy"
+  - "Palladium Fantasy 1E"
+  - "Palladium Fantasy 1E"
 
 songsofthedusk:
   - "Songs for the Dusk"
