Add group to Palladium'

--- a/approved.yaml
+++ b/approved.yaml
@@ -2912,9 +2912,10 @@ bluebeardbride:
 ##  - "Magica_Logia"
 ##  - "Magica Logia"
 
-palladiumfantasy:
+palladiumfantasy1e:
   - "Palladium Fantasy 1E"
   - "Palladium Fantasy 1E"
+  - "Palladium"
 
 songsofthedusk:
   - "Songs for the Dusk"
