uc-598 add tremulus

--- a/approved.yaml
+++ b/approved.yaml
@@ -2922,7 +2922,10 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Blades in the Dark"
 
-
+tremulus:
+  - "Tremulus"
+  - "Tremulus"
+  - "Apocalypse World Engine"
 
 
 
