uc-598 revert new sheet

--- a/approved.yaml
+++ b/approved.yaml
@@ -2922,10 +2922,10 @@ songsofthedusk:
   - "Songs for the Dusk"
   - "Blades in the Dark"
 
-tremulus:
-  - "Tremulus"
-  - "Tremulus"
-  - "Apocalypse World Engine"
+#tremulus:
+ # - "Tremulus"
+ # - "Tremulus"
+ # - "Apocalypse World Engine"
 
 
 
