fix line endings on W&G, update approve

--- a/approved.yaml
+++ b/approved.yaml
@@ -69,6 +69,12 @@ earthdawnofficial:
   - "Earthdawn by FASA"
   - "Earthdawn"
 
+bandofbladesofficial:
+  - "Band of Blades"
+  - "Band of Blades by Evil Hat Productions"
+  - "Blades in the Dark"
+
+
 hcsvntdraconesofficial:
   - "Hc Svnt Dracones Second Edition"
   - "Hc Svnt Dracones 2E by Weapons Grade Funk"
@@ -2524,7 +2530,7 @@ terre2:
 bandofblades:
 - "Band of Blades"
 - "Band of Blades"
-- "Blades in the Dark"
+- "hidden"
 
 warhammerblackcrusadeadv:
 - "Black Crusade Advanced API"
@@ -2945,13 +2951,24 @@ offworlders:
   - "Offworlders"
 
 mutantyearzerov2:
-  - "Mutant Year Zero"
-  - "Mutant Year Zero"
+  - "Mutant: Year Zero"
+  - "Mutant: Year Zero"
   - "Year Zero Engine"
 
 #magicalogica:
  # - "Magica_Logia"
  # - "Magica Logia"
+
+devastra:
+  - "Devâstra"
+  - "Devâstra"
+
+alienyz:
+  - "Alien Roleplaying Game"
+  - "Alien"
+  - "Year Zero Engine"
+
+
 
 
   
