fix approved list

--- a/approved.yaml
+++ b/approved.yaml
@@ -1241,7 +1241,7 @@ hollowearthexpedition:
 
 aliens:
 - "Aliens"
-- "Aliens"
+- "Aliens Colonial Marines"
 
 dogsinthevineyard:
 - "Dogs-in-the-Vineyard"
@@ -2951,7 +2951,7 @@ offworlders:
   - "Offworlders"
 
 mutantyearzerov2:
-  - "Mutant: Year Zero"
+  - "Mutant Year Zero"
   - "Mutant: Year Zero"
   - "Year Zero Engine"
 
@@ -2965,7 +2965,7 @@ devastra:
 
 alienyz:
   - "Alien Roleplaying Game"
-  - "Alien"
+  - "Aliens"
   - "Year Zero Engine"
 
 
