--- a/approved.yaml
+++ b/approved.yaml
@@ -46,6 +46,12 @@ pathfinderofficial:
 pathfinder2e:
 - "Pathfinder 2 Playtest by Roll20"
 - "Pathfinder 2 Playtest by Roll20"
+- hidden
+
+pathfinder2eofficial:
+- "Pathfinder 2 by Roll20"
+- "Pathfinder 2 by Roll20"
+- Pathfinder
 
 starfinder:
 - "Starfinder by Roll20"
