Fix folder for the new Band of Blades sheet
@clevett, could you take a look? This entry is currently referring to the wrong underlying sheet.

--- a/approved.yaml
+++ b/approved.yaml
@@ -76,7 +76,7 @@ earthdawnofficial:
   - "Earthdawn"
 
 bandofbladesofficial:
-  - "Band of Blades"
+  - "Band of Blades Official"
   - "Band of Blades by Evil Hat Productions"
   - "Blades in the Dark"
 
