uc-296 revert change

--- a/approved.yaml
+++ b/approved.yaml
@@ -49,8 +49,8 @@ pathfinder2e:
 - hidden
 
 pathfinder2eofficial:
-- "Pathfinder Second Edition by Roll20"
-- "Pathfinder Second Edition by Roll20"
+- "Pathfinder 2 by Roll20"
+- "Pathfinder 2 by Roll20"
 - Pathfinder
 
 starfinder:
