uc-296 add back old folder, rename later

--- a/approved.yaml
+++ b/approved.yaml
@@ -49,7 +49,7 @@ pathfinder2e:
 - hidden
 
 pathfinder2eofficial:
-- "Pathfinder Second Edition by Roll20"
+- "Pathfinder 2 by Roll20"
 - "Pathfinder Second Edition by Roll20"
 - Pathfinder
 
