--- a/approved.yaml
+++ b/approved.yaml
@@ -49,7 +49,7 @@ pathfinder2e:
 - hidden
 
 pathfinder2eofficial:
-- "Pathfinder 2 by Roll20"
+- "Pathfinder Second Edition by Roll20"
 - "Pathfinder Second Edition by Roll20"
 - Pathfinder
 
@@ -2961,9 +2961,9 @@ mutantyearzerov2:
   - "Mutant: Year Zero"
   - "Year Zero Engine"
 
-#magicalogica:
- # - "Magica_Logia"
- # - "Magica Logia"
+magicalogica:
+  - "Magica_Logia"
+ - "Magica Logia"
 
 devastra:
   - "Devâstra"
@@ -2974,7 +2974,8 @@ alienyz:
   - "Aliens"
   - "Year Zero Engine"
 
-
-
+terrorinfinityfx:
+- "Terror Infinity - (FX)"
+- "Terror Infinity"
 
   
