uc-680 cyberpunk red

--- a/approved.yaml
+++ b/approved.yaml
@@ -2978,4 +2978,7 @@ terrorinfinityfx:
   - "Terror Infinity - (FX)"
   - "Terror Infinity FX"
 
+cyerberpunkredjumpstart:
+  - "Cyberpunk Red"
+  - "Cyberpunk Red"
   
