--- a/approved.yaml
+++ b/approved.yaml
@@ -688,6 +688,11 @@ scion:
 - "Scion"
 - "Storytelling System"
 
+scion2e:
+- "Scion2e"
+- "Scion Second Edition"
+- "Storytelling System"
+
 dragonage:
 - "Dragon Age RPG"
 - "Dragon Age"
@@ -865,7 +870,7 @@ dasschwarzeauge5:
 
 mutantyearzeroalt:
 - "Mutant Year Zero Alternative"
-- "Mutant: Year Zero"
+- "Mutant: Year Zero Alternative"
 - "Year Zero Engine"
 
 exalted3e:
