update yaml & pathfinderv2.01

--- a/approved.yaml
+++ b/approved.yaml
@@ -70,16 +70,24 @@ thestrange:
 
 #Publisher Sheets
 #When adding an official sheet include 'official' in the short name for the select menu
+bandofbladesofficial:
+  - "Band of Blades Official"
+  - "Band of Blades by Evil Hat Productions"
+  - "Forged in the Dark"
+
+bladesinthedarkadvancedofficial:
+- "Blades in the Dark"
+- "Blades in the Dark by Evil Hat Productions"
+- "Forged in the Dark"
+
+bluebeardbride:
+  - "Bluebeard's Bride"
+  - "Bluebeard's Bride by Magpie Games"
+
 earthdawnofficial:
   - "Earthdawn (FASA Official)"
   - "Earthdawn by FASA"
   - "Earthdawn"
-
-bandofbladesofficial:
-  - "Band of Blades Official"
-  - "Band of Blades by Evil Hat Productions"
-  - "Blades in the Dark"
-
 
 hcsvntdraconesofficial:
   - "Hc Svnt Dracones Second Edition"
@@ -89,6 +97,11 @@ hcsvntdraconesofficial:
 reachoftitanofficial:
   - "ReachofTitan"
   - "Reach of Titan by Third Act Publishing"
+
+scumandvillainyofficial:
+- "Scum - Villainy"
+- "Scum and Villainy by Evil Hat Productions"
+- "Forged in the Dark"
 
 sportsbrawlofficial:
   - "Sports Brawl by Lost West Media"
@@ -1881,10 +1894,6 @@ runequest3ed:
 - "RuneQuest: 3rd Edition"
 - "RuneQuest"
 
-bladesinthedarkadvanced:
-- "Blades in the Dark"
-- "Blades in the Dark"
-
 mistborn:
 - "Mistborn"
 - "Mistborn Adventure Game"
@@ -2098,10 +2107,6 @@ mythras:
 cronicasrpg:
 - "Cronicas-RPG"
 - "Creation of Crônicas"
-
-scumandvillainy:
-- "Scum - Villainy"
-- "Scum and Villainy"
 
 deltagreen:
 - "Delta Green"
@@ -2925,10 +2930,6 @@ storiesuntold:
   - "Stories Untold"
   - "Stories Untold"
 
-bluebeardbride:
-  - "Bluebeard's Bride"
-  - "Bluebeard's Bride"
-
 palladiumfantasy1e:
   - "Palladium Fantasy 1E"
   - "Palladium Fantasy 1E"
@@ -2937,7 +2938,7 @@ palladiumfantasy1e:
 songsofthedusk:
   - "Songs for the Dusk"
   - "Songs for the Dusk"
-  - "Blades in the Dark"
+  - "Forged in the Dark"
 
 tremulus:
   - "Tremulus"
