--- a/approved.yaml
+++ b/approved.yaml
@@ -50,7 +50,7 @@ pathfinderofficial:
 pathfinder2e:
   - "Pathfinder 2 Playtest by Roll20"
   - "Pathfinder 2 Playtest by Roll20"
-  - "Pathfinder Second Edition"
+  - hidden
   - hidden
 
 pathfinder2eofficial:
