uc-695 add Wild Talents 2e

--- a/approved.yaml
+++ b/approved.yaml
@@ -3006,7 +3006,7 @@ buriedtreasures:
   - "Buried Treasures"
 
 wildtalents: 
-  - "Wild Talents"
+  - "Wild Talents 2nd Edition"
   - "Wild Talents Second Edition"
   - "Wild Talents Second Edition"
 
