uc-695 fix in nomie

--- a/approved.yaml
+++ b/approved.yaml
@@ -2992,7 +2992,7 @@ cyerberpunkredjumpstart:
 
 innominesatanis:
   - "INS-MV_3E"
-  - "In Nomine Satanis / Magna Veritas"
+  - "In Nomine Satanis / Magna Veritas Third Edition"
   - "In Nomine Satanis Third Edition"
 
 dasschwarzeauge5tsa:
