update yaml with more info

--- a/approved.yaml
+++ b/approved.yaml
@@ -19,7 +19,7 @@ burnbryte:
 
 officialnwod:
   - "Chronicles of Darkness by Roll20"
-  - "Chronicles of Darkness by Roll20 ( New World of Darkness )"
+  - "Chronicles of Darkness by Roll20"
   - "Storytelling System"
 
 cypherstemsr20:
@@ -30,7 +30,7 @@ cypherstemsr20:
 ogl5e:
   - "5th Edition OGL by Roll20"
   - "D&D 5E by Roll20"
-  - "D&D 5E"
+  - "Dungeons & Dragons 5th Edition"
 
 dungeonworldofficial:
   - "Dungeon World by Roll20"
@@ -50,13 +50,13 @@ pathfinderofficial:
 pathfinder2e:
   - "Pathfinder 2 Playtest by Roll20"
   - "Pathfinder 2 Playtest by Roll20"
-  - hidden
+  - "Pathfinder 2nd Edition"
   - hidden
 
 pathfinder2eofficial:
   - "Pathfinder Second Edition by Roll20"
   - "Pathfinder Second Edition by Roll20"
-  - "Pathfinder Second Edition"
+  - "Pathfinder 2nd Edition"
 
 starfinder:
   - "Starfinder by Roll20"
@@ -71,7 +71,7 @@ startrekofficial:
 thestrange:
   - "The Strange"
   - "The Strange by Roll20"
-  - "The Strange"
+  - "Cypher System"
   - "hidden"
 
 #Publisher Sheets
@@ -94,12 +94,12 @@ bluebeardbride:
 earthdawnofficial:
   - "Earthdawn (FASA Official)"
   - "Earthdawn by FASA"
-  - "Earthdawn"
+  - "Earthdawn 4th Edition"
 
 hcsvntdraconesofficial:
   - "Hc Svnt Dracones Second Edition"
-  - "Hc Svnt Dracones 2E by Weapons Grade Funk"
-  - "Hc Svnt Dracones"
+  - "Hc Svnt Dracones 2nd Edition by Weapons Grade Funk"
+  - "Hc Svnt Dracones 2nd Edition"
 
 reachoftitanofficial:
   - "ReachofTitan"
@@ -132,25 +132,48 @@ yatzoidofficial:
   - Yatzoid
 
 #Community Sheets
-#D&D
+#APOCALYPE WORLD ENGINE
+dungeonworld:
+  - "DungeonWorld"
+  - "Dungeon World"
+  - "Apocalypse World Engine"
+
+#BURNING WHEEL
+mouseguard:
+  - "MouseGuard"
+  - "Mouse Guard"
+  - "The Burning Wheel"
+
+#DUNGEONS & DRAGONS
+adnd1e:
+  - "AD&D_1E"
+  - "Advanced 1st Edition"
+  - "Dungeons & Dragons"
+
 adndte:
   - "AD&D_2E"
   - "Advanced 2nd Edition (Simple Sheet)"
-  - "D&D 2E"
+  - "Dungeons & Dragons 2nd Edition"
 
 adventurepack:
   - "Adventure Pack"
   - "D&D 3.5E Adventure Pack"
+  - "Dungeons & Dragons 3.5 Edition"
+
+dnd35e:
+  - "D&D_3-5"
   - "D&D 3.5E"
+  - "Dungeons & Dragons 3.5 Edition"
 
 dnd4e:
   - "D&D_4E"
   - "D&D 4E"
-  - "D&D 4E"
+  - "Dungeons & Dragons 4th Edition"
 
 dndnextactoba:
   - "DnDNext_Actoba"
   - "D&D Next *PLAYTEST RULES*"
+  - "Dungeons & Dragons 5th Edition"
   - "hidden"
 
 #d20 System
@@ -159,11 +182,36 @@ starwarssaga:
   - "Star Wars: Saga Edition"
   - "d20 System"
 
+#DARK HERESY
+darkheresy:
+  - "Dark_Heresy"
+  - "Dark Heresy: 1st Edition"
+  - "Dark Heresy 1st Edition"
+
+#DUNGEON CRAWL CLASSICS
+dcc:
+  - "DCC"
+  - "Dungeon Crawl Classics"
+  - "Dungeon Crawl Classics"
+
+#CALL OF CTHULHU
+callofcthulu:
+  - "Call_of_Cthulhu"
+  - "Call of Cthulhu: 5th Edition"
+  - "Call of Cthulhu 5th Edition"
+  - "hidden"
+
 #CYPHER SYSTEM
 numenera:
   - "Numenera"
   - "Numenera"
   - "Cypher System"
+
+#FANTASY CRAFT
+fantasycraft:
+  - "Fantasy_Craft"
+  - "Fantasy Craft"
+  - "Fantasy Craft"
 
 #FATE
 fatecore:
@@ -177,32 +225,67 @@ fatecorev2:
   - "Fate: Core Edition"
   - "Fate"
 
+# GURPS
+gurps:
+  - "GURPS"
+  - "GURPS"
+  - "GURPS"
+
 #HACKMASTER
 hackmaster5e:
   - "HackMaster_5E"
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
+#NARRATIVES UNLIMITED D10
+narrativesunlimitedd10:
+- "NarrativesUnlimitedD10"
+- "Narratives Unlimited D10"
+- "Narratives Unlimited D10"
+
+#PATHFINDER
+pathfinderneceros:
+  - "Pathfinder Community"
+  - "Pathfinder Community"
+  - "Pathfinder"
+
+#POKEMON TABLETOP UNITED
+ptu:
+  - "PokemonTabletopUnited"
+  - "Pokemon Tabletop United"
+  - "Pokemon Tabletop United"
+
+#ROLEMASTER
+rolemaster1e:
+  - "Rolemaster_1E"
+  - "Rolemaster: 1st Edition"
+  - "Rolemaster"
+
 #SHADOWRUN 
 shadowrun5e:
- - "Shadowrun5e"
- - "Shadowrun: 5th Edition"
- - "Shadowrun 5th Edition"
- - "hidden"
+  - "Shadowrun5e"
+  - "Shadowrun: 5th Edition"
+  - "Shadowrun 5th Edition"
+  - "hidden"
 
 #STAR WARS
 sweote:
- - "Star Wars Edge of the Empire"
- - "Star Wars: FFG (Simple)"
- - "Star Wars Edge of the Empire"
+  - "Star Wars Edge of the Empire"
+  - "Star Wars: FFG (Simple)"
+  - "Star Wars Edge of the Empire"
 
 sweotedice:
- - "StarWarsEdgeOfTheEmpire_Dice"
- - "Star Wars: Edge of the Empire (API-Compatible)"
- - "Star Wars Edge of the Empire"
- - "hidden"
+  - "StarWarsEdgeOfTheEmpire_Dice"
+  - "Star Wars: Edge of the Empire (API-Compatible)"
+  - "Star Wars Edge of the Empire"
+  - "hidden"
 
 #STORYTELLING SYSTEM
+nwodchangeling:
+  - "NWOD-Changeling"
+  - "Changeling: The Lost (nWoD)"
+  - "Storytelling System"
+
 exalted2e:
   - "Exalted2e"
   - "Exalted: 2nd Edition"
@@ -211,4 +294,38 @@ exalted2e:
 mage2e:
   - "CWOD-Mage"
   - "Mage: The Ascension (cWoD)"
-  - "Storytelling System" 
+  - "Storytelling System"
+
+vampire2e:
+  - "CWOD-Vampire"
+  - "Vampire: The Masquerade (cWoD)"
+  - "Storytelling System"
+
+cwodv20:
+  - "CWOD-V20"
+  - "Vampire: The Masquerade 20th Anniversary Edition (cWoD)"
+  - "Storytelling System"
+
+werewolf2e:
+  - "CWOD-Werewolf"
+  - "Werewolf: The Apocalypse (cWoD)"
+  - "Storytelling System"
+
+#THE ONE RING
+theonering:
+  - "The One Ring"
+  - "The One Ring"
+  - "The One Ring"
+
+#TRUE 20
+true20:
+  - "True20"
+  - "True20"
+  - "True20"
+
+#BOARD GAMES
+mysteryoftheabbey:
+  - "Mystery-of-the-Abbey"
+  - "Mystery of the Abbey"
+  - "Mystery of the Abbey"
+
