--- a/approved.yaml
+++ b/approved.yaml
@@ -2,7 +2,7 @@
 #folder   = info[1]
 #longname = info[2]
 #system   = info[3]
-#hidden   = info[4]
+#hidden   = info[4] || "active"
 
 #By Roll20 sheets
 #When adding a by Roll20 sheet include "by Roll20" in the long name to populate the sheet menu
@@ -132,11 +132,46 @@ yatzoidofficial:
   - Yatzoid
 
 #Community Sheets
+#ANIMA
+anima:
+  - "Anima-Beyond-Fantasy"
+  - "Anima: Beyond Fantasy"
+  - "Anima Beyond Fantasy"
+
 #APOCALYPE WORLD ENGINE
 dungeonworld:
   - "DungeonWorld"
   - "Dungeon World"
   - "Apocalypse World Engine"
+
+apocalypseworld:
+  - "AW"
+  - "Apocalypse World 1st Edition"
+  - "Apocalypse World Engine"
+
+#BASIC FANTASY
+basicfantasy:
+  - "Basic Fantasy RPG"
+  - "Basic Fantasy RPG"
+  - "Basic Fantasy RPG"
+  - "hidden"
+
+#BASIC ROLE-PLAYING
+callofcthulu:
+  - "Call_of_Cthulhu"
+  - "Call of Cthulhu 5th Edition"
+  - "Basic Role-Playing"
+  - "hidden"
+
+coc7e:
+  - "Call_of_Cthulhu_7th_Ed"
+  - "Call of Cthulhu 7th Edition"
+  - "Basic Role-Playing"
+
+runequest6:
+  - "Runequest_6"
+  - "RuneQuest 6th Edition"
+  - "Basic Role-Playing"
 
 #BURNING WHEEL
 mouseguard:
@@ -144,16 +179,44 @@ mouseguard:
   - "Mouse Guard"
   - "The Burning Wheel"
 
+torchbearer:
+  - "Torchbearer"
+  - "Torchbearer"
+  - "The Burning Wheel"
+
+#COPS
+cops:
+  - "COPS"
+  - "COPS"
+  - "C.O.P.S"
+
+#CORTEX PLUS
+firefly:
+  - "Firefly"
+  - "Firefly"
+  - "Cortex Plus"
+
+#CORTEX SYSTEM
+serenity:
+- "Serenity"
+- "Serenity"
+- "Cortex System"
+
 #DUNGEONS & DRAGONS
 adnd1e:
   - "AD&D_1E"
   - "Advanced 1st Edition"
-  - "Dungeons & Dragons"
+  - "Advanced Dungeons & Dragons"
 
 adndte:
   - "AD&D_2E"
   - "Advanced 2nd Edition (Simple Sheet)"
-  - "Dungeons & Dragons 2nd Edition"
+  - "Advanced Dungeons & Dragons 2nd Edition"
+
+labyrinthlord:
+  - "Labyrinth-Lord"
+  - "Labyrinth Lord"
+  - "Dungeons & Dragons Basic Set"
 
 adventurepack:
   - "Adventure Pack"
@@ -176,17 +239,37 @@ dndnextactoba:
   - "Dungeons & Dragons 5th Edition"
   - "hidden"
 
+dnd5e:
+  - "DnD_5e"
+  - "D&D 5E (Community Contributed)"
+  - "Dungeons & Dragons 5th Edition"
+
 #d20 System
+castlesandcrusades:
+  - "Castles&Crusades"
+  - "Castles & Crusades"
+  - "d20 System"
+
 starwarssaga:
   - "Star Wars Saga Edition"
-  - "Star Wars: Saga Edition"
+  - "Star Wars Saga Edition"
+  - "d20 System"
+ 
+ironkingdoms:
+  - "Iron Kingdoms RPG"
+  - "Iron Kingdoms"
   - "d20 System"
 
 #DARK HERESY
 darkheresy:
   - "Dark_Heresy"
-  - "Dark Heresy: 1st Edition"
   - "Dark Heresy 1st Edition"
+  - "Warhammer 40,000 Roleplay"
+
+darkheresy2e:
+  - "Dark_Heresy_2ed"
+  - "Dark Heresy 2nd Edition"
+  - "Warhammer 40,000 Roleplay"
 
 #DUNGEON CRAWL CLASSICS
 dcc:
@@ -194,18 +277,35 @@ dcc:
   - "Dungeon Crawl Classics"
   - "Dungeon Crawl Classics"
 
-#CALL OF CTHULHU
-callofcthulu:
-  - "Call_of_Cthulhu"
-  - "Call of Cthulhu: 5th Edition"
-  - "Call of Cthulhu 5th Edition"
-  - "hidden"
+#CHRONICLE SYSTEM
+asoiaf:
+  - "Song of Ice and Fire Roleplaying"
+  - "A Song of Ice and Fire"
+  - "Chronicle System"
+
+#CONTINUUM
+continuum:
+  - "Continuum"
+  - "Continuum"
+  - "Continuum"
 
 #CYPHER SYSTEM
 numenera:
   - "Numenera"
   - "Numenera"
   - "Cypher System"
+
+numeneratwo:
+  - "Numenera_NathasNumenera_English"
+  - "Numenera (Tabbed)"
+  - "Cypher System"
+  - "hidden"  
+
+numeneratwofrench:
+  - "Numenera_NathasNumenera_French"
+  - "Numenera (French)"
+  - "Cypher System"
+  - "hidden"
 
 #FANTASY CRAFT
 fantasycraft:
@@ -216,19 +316,52 @@ fantasycraft:
 #FATE
 fatecore:
   - "Fate_Core"
-  - "Fate: Core Edition"
+  - "Fate Core Edition"
   - "Fate"
   - "hidden"
 
 fatecorev2:
   - "Fate Core v2"
-  - "Fate: Core Edition"
+  - "Fate Core Edition"
   - "Fate"
 
-# GURPS
+dresdenfiles:
+  - "DFRPG"
+  - "Dresden Files"
+  - "Fate"
+
+#THE FUGUE
+fugue:
+  - "Fugue"
+  - "Fugue"
+  - "The Fugue"
+
+psipunk:
+  - "Psi-Punk"
+  - "Psi-Punk"
+  - "The Fugue"
+
+#GUMSHOE
+trailofcth:
+  - "Trail of Cthulhu"
+  - "Trail of Cthulhu"
+  - "GUMSHOE"
+
+trailofcthgumshoe:
+  - "Gumshoe_TrailOfCthulhu"
+  - "Trail of Cthulhu (API-Compatible)"
+  - "GUMSHOE"
+  - "hidden"
+
+#GURPS
 gurps:
   - "GURPS"
   - "GURPS"
+  - "GURPS"
+
+gurpsstyletwo:
+  - "GURPS_Mutonized"
+  - "GURPS (Style #2)"
   - "GURPS"
 
 #HACKMASTER
@@ -237,11 +370,64 @@ hackmaster5e:
   - "HackMaster 5th Edition"
   - "HackMaster 5th Edition"
 
+#HERO GAMES
+herogames6e:
+  - "Hero Games 6e"
+  - "Hero Games 6th Edition"
+  - "hidden"
+
+#INTERLOCK SYSTEM
+cyberpunk2020:
+  - "Cyberpunk 2020"
+  - "Cyberpunk 2020"
+  - "Interlock System"
+
+kromore:
+- "Kromore"
+- "Kromore"
+- "Kromore"
+
+#LEGEND OF THE FIVE RINGS
+legendofthefiverings:
+  - "L5R"
+  - "Legend of the Five Rings: 4th Edition"
+  - "Legend of the Five Rings 4th Edition"
+
+#MAID
+maidrpg:
+  - "Maid"
+  - "Maid the Role Playing Game"
+  - "Maid the Role Playing Game"
+
+#MARVEL SUPERHEROES
+marvelsh:
+  - "MarvelSH"
+  - "Marvel Superheroes"
+  - "Marvel Superheroes"
+
+#MEGAVERSAL
+palladium:
+  - "Palladium Megaverse"
+  - "Palladium Megaverse"
+  - "Megaversal"
+
+#MUTANTS AND MASTERMINDS
+mandm3e:
+  - "Mutants and Masterminds 3E"
+  - "Mutants and Masterminds 3rd Edition"
+  - "Mutants and Masterminds 3rd Edition"
+
 #NARRATIVES UNLIMITED D10
 narrativesunlimitedd10:
-- "NarrativesUnlimitedD10"
-- "Narratives Unlimited D10"
-- "Narratives Unlimited D10"
+  - "NarrativesUnlimitedD10"
+  - "Narratives Unlimited D10"
+  - "Narratives Unlimited D10"
+
+#THE ONE RING
+theonering:
+  - "The One Ring"
+  - "The One Ring"
+  - "The One Ring"
 
 #PATHFINDER
 pathfinderneceros:
@@ -249,51 +435,124 @@ pathfinderneceros:
   - "Pathfinder Community"
   - "Pathfinder"
 
+pathfinderoldneceros:
+  - "Pathfinder (Old)"
+  - "Pathfinder (Legacy Layout)"
+  - "Pathfinder"
+
+pathfindersimple:
+  - "pathfinder_simple"
+  - "Pathfinder (Simple Layout)"
+  - "Pathfinder"
+  - "hidden"
+
+#PENDRAGON
+pendragon:
+  - "Pendragon"
+  - "King Arthur Pendragon"
+  - "Pendragon"
+
+pendragonfrench:
+  - "Pendragon-french"
+  - "King Arthur Pendragon (French)"
+  - "Pendragon"
+
 #POKEMON TABLETOP UNITED
 ptu:
   - "PokemonTabletopUnited"
   - "Pokemon Tabletop United"
   - "Pokemon Tabletop United"
 
+##PORTES MONSTRES TRESORS
+portesmonstrestresors:
+  - "PortesMonstresTresors"
+  - "Portes Monstres Tresors (French)"
+  - "Portes Monstres Tresors"
+
 #ROLEMASTER
 rolemaster1e:
   - "Rolemaster_1E"
-  - "Rolemaster: 1st Edition"
-  - "Rolemaster"
+  - "Rolemaster 1st Edition"
+  - "Rolemaster Standard System"
+
+rolemasterstandard:
+  - "Rolemaster-Standard-System"
+  - "Rolemaster Standard System"
+  - "Rolemaster Standard System"
+
+#SAVAGE WORLDS
+savageworlds:
+  - "SavageWorlds"
+  - "Savage Worlds"
+  - "Savage Worlds"
+
+savageworldstwo:
+  - "SavageWorlds-Tabbed"
+  - "Savage Worlds (Tabbed Layout)"
+  - "Savage Worlds"
 
 #SHADOWRUN 
 shadowrun5e:
   - "Shadowrun5e"
-  - "Shadowrun: 5th Edition"
   - "Shadowrun 5th Edition"
+  - "Shadowrun 5th Edition"
+  - "hidden"
+
+#SIMPLE SYSTEM
+simplesystem:
+  - "Simple System"
+  - "Simple System"
+  - "Simple System"
+
+#STAR FRONTIERS
+starfrontiers:
+  - "Star Frontiers"
+  - "Star Frontiers"
+  - "Star Frontiers"
   - "hidden"
 
 #STAR WARS
 sweote:
   - "Star Wars Edge of the Empire"
-  - "Star Wars: FFG (Simple)"
+  - "Star Wars FFG (Simple)"
   - "Star Wars Edge of the Empire"
 
 sweotedice:
   - "StarWarsEdgeOfTheEmpire_Dice"
-  - "Star Wars: Edge of the Empire (API-Compatible)"
+  - "Star Wars Edge of the Empire (API-Compatible)"
   - "Star Wars Edge of the Empire"
   - "hidden"
+
+#STARS WITHOUT NUMBER
+starswithoutnumber:
+  - "Stars_Without_Number"
+  - "Stars Without Number"
+  - "Stars Without Number"
 
 #STORYTELLING SYSTEM
 nwodchangeling:
   - "NWOD-Changeling"
-  - "Changeling: The Lost (nWoD)"
+  - "Changeling: The Lost (cWoD)"
   - "Storytelling System"
 
 exalted2e:
   - "Exalted2e"
-  - "Exalted: 2nd Edition"
+  - "Exalted 2nd Edition"
+  - "Storytelling System"
+
+nwodhunter:
+  - "NWOD-Hunter The Vigil"
+  - "Hunter: The Vigil (nWoD)"
   - "Storytelling System"
 
 mage2e:
   - "CWOD-Mage"
   - "Mage: The Ascension (cWoD)"
+  - "Storytelling System"
+
+nwodmage:
+  - "NWOD-Mage"
+  - "Mage: The Awakening (nWoD)"
   - "Storytelling System"
 
 vampire2e:
@@ -311,17 +570,57 @@ werewolf2e:
   - "Werewolf: The Apocalypse (cWoD)"
   - "Storytelling System"
 
-#THE ONE RING
-theonering:
-  - "The One Ring"
-  - "The One Ring"
-  - "The One Ring"
+godmachine:
+  - "The God Machine Chronicle (nWoD)"
+  - "World of Darkness: The God Machine Chronicle (cWoD)"
+  - "Storytelling System"
+
+#SWORDS ADN WIZARDRY
+swordsandwiz:
+  - "Swords_&_Wizardry"
+  - "Swords & Wizardry"
+  - "Swords & Wizardry"
+
+#TAVERN TALES
+taverntales:
+  - "Tavern-Tales"
+  - "Tavern Tales"
+  - "Tavern Tales"
+
+#TORG
+torg:
+  - "Torg"
+  - "Torg"
+  - "Torg"
 
 #TRUE 20
 true20:
   - "True20"
   - "True20"
   - "True20"
+
+#UNKNOWN ARMIES
+unknownponies:
+  - "UnknownPonies"
+  - "Unknown Ponies"
+  - "Unknown Armies"
+
+unknownarmies:
+  - "UnknownArmies"
+  - "Unknown Armies 2nd Edition"
+  - "Unknown Armies 2nd Edition"
+
+#WITCH HUNTER
+witchhunter2e:
+  - "Witch_Hunter_2e"
+  - "Witch Hunter 2nd Edition"
+  - "Witch Hunter"
+
+#YOGSQUEST
+yogsquest:
+  - "Yogsquest"
+  - "Yogsquest"
+  - "Yogsquest"
 
 #BOARD GAMES
 mysteryoftheabbey:
